i965/vec4: Make sure that imm writes are to registers in the same file.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=87887